Fixed app on mobile displays

--- a/src/app/champions/champions.component.css
+++ b/src/app/champions/champions.component.css
@@ -215,3 +215,39 @@
         margin-right: -2em;
     }
 } 
+
+@media only screen and (max-width: 577px) {
+
+    .column1 {
+        max-width: 100px;
+        margin-left: -10px;
+    }
+
+    .iconColumn, .column2 {
+        max-width: 100px;
+        margin: auto;
+    }
+
+    .column3 {
+        max-width: 50px;
+        margin: auto;
+    }
+
+    .column4, .teamColumn {
+        min-width: 290px;
+        margin: auto;
+    }
+    
+    .redColumn, .blueColumn {
+        max-width: 145px;
+    }
+
+    .blue {
+        font-size: 9px;
+    }
+   
+   .red {
+        font-size: 9px;
+    }
+
+} 
